test/tests/stages/7_compound_statements/valid/extra_credit/goto_before_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  {
  if
  (
  identifier(a)
  !=
  const int(0)
  )
  identifier(return_a)
  :
  return
  identifier(a)
  ;
  int
  identifier(a)
  =
  const int(4)
  ;
  goto
  identifier(return_a)
  ;
  }
  }
