test/tests/stages/7_compound_statements/invalid_semantics/extra_credit/goto_use_before_declare.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  if
  (
  identifier(x)
  !=
  const int(0)
  )
  {
  identifier(return_y)
  :
  return
  identifier(y)
  ;
  }
  int
  identifier(y)
  =
  const int(4)
  ;
  goto
  identifier(return_y)
  ;
  }
